--- a/demo.html
+++ b/demo.html
@@ -282,4 +282,26 @@
   </div>
 </div>
 
+
+
+
+<div class="white_section_nerf">
+  <div class="w-container">
+  <h2 class="grey-heading_nerf">BibTeX</h2>
+  <div class="grey_container w-container">
+    <div class="bibtex">
+     <pre><code>@misc{qiu2024efficient,
+      title={Efficient Autoregressive Audio Modeling via Next-Scale Prediction},
+      author={Kai Qiu and Xiang Li and Hao Chen and Jie Sun and Jinglu Wang and Zhe Lin and Marios Savvides and Bhiksha Raj},
+      year={2024},
+      eprint={2408.09027},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}</code></pre>
+    </div>
+    </div>
+    </div>
+    </div>
+
+
 </body></html>
